Make sure hamburger in header is always visible.
Simplify header and sidebar CSS.

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,3 +1,11 @@
+.sidebarOpen .legend, .sidebarOpen .toggleButton, .sidebarOpen .container {
+    left: 320px;
+}
+
+.sidebarClosed .featureSelected .sidebar-container {
+    display: none;
+}
+
 .panel-container {
     display: flex;
     flex-direction: column;
